documentacao, alteracao ao openapi, mudanças no process e criacao do receipts
